--- a/test.css
+++ b/test.css
@@ -9,3 +9,12 @@ h5 {
   font-family: monospace;
   font-size: 30px;
 }
+#top {
+  border: 3px solid blueviolet;
+}
+.st1 {
+  color: chocolate;
+}
+.st2 {
+  text-transform: uppercase;
+}
