--- a/test.css
+++ b/test.css
@@ -9,20 +9,26 @@ a {
 }
 h4,
 h5 {
-  /* RGB- Red Green Blue value=(0-255) */
-  color: rgb(0, 255, 0);
+  color: rgb(0, 255, 0); /* RGB- Red Green Blue value=(0-255) */
   font-family: monospace;
   font-size: 30px;
 }
 #top {
-  /* RGBA- RGB opacity/transparency value=(0/1) */
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(
+    255,
+    255,
+    255,
+    0.4
+  ); /* RGBA- A(alpha) opacity/transparency value=(0-1) */
   border: 3px solid blueviolet;
 }
 .st1 {
   /* class selector */
-  color: chocolate;
+  color: #09b1d0; /* HEX values #RRGGBB value=(0-9-A-E) */
 }
 .st2 {
   text-transform: uppercase;
+}
+.st3 {
+  color: #fff;
 }
