--- a/test.css
+++ b/test.css
@@ -1,31 +1,9 @@
 * {
-  /* universal selector */
+  /* universal selector */ /* usually used to reset the default browser style */
   color: rgb(128, 115, 64);
 }
-a {
-  color: rgb(25, 51, 167);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-h4,
-h5 {
-  color: rgb(0, 255, 0); /* RGB- Red Green Blue value=(0-255) */
-  font-family: monospace;
-  font-size: 30px;
-}
-.relative1 {
-  font-size: 1em;   /* em is relative to the parent (1em = 16px default browser style = base value) */
-}
-.relative2 {
-  font-size: 2em;
-}
-.relative3 {
-  font-size: 2rem;    /* rem is relative to the root(html style) */
-}
-.absolute {
-  font-size: 30px;  /* px is an absolute value (not dependent on any element) */
-}
 #top {
+  text-decoration: line-through;
   color: rgba(
     255,
     255,
@@ -34,6 +12,56 @@ h5 {
   ); /* RGBA- A=(alpha) opacity/transparency value=(0-1) */
   border: 4px solid blueviolet;
   max-width: 400px;
+}
+.banner /* a banner */ {
+  width: 50vw; /* vw - view width */
+  height: 10vh; /* vh - view hieght */
+  background-color: #e0ca3c;
+}
+.banner2  /*  */ {
+  width: 96.6vw;
+  height: calc(100vh - 26vh); /* calc function (give space inbetween) */
+  background-color: #136f63;
+}
+a {
+  text-decoration: none; /*removes underline from links*/
+  color: rgb(25, 51, 167);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif; /* font family. Here sans-serif is generic font family */
+}
+h4,
+h5 {
+  color: rgb(0, 255, 0); /* RGB- Red Green Blue value=(0-255) */
+  font-family: monospace;
+  font-size: 30px;
+}
+.p1 {
+  width: 400px;
+  font-style: italic;
+  text-align: right;
+  text-indent: 200px;
+  line-height: 2em;
+  text-transform: capitalize;
+}
+.p2 {
+  width: 70%;
+  text-align: center;
+  letter-spacing: 4px;
+  word-spacing: 20px;
+  text-transform: uppercase;
+  text-decoration: overline;
+}
+.relative1 {
+  font-size: 1em; /* em is relative to the parent (1em = 16px default browser style = base value) */
+}
+.relative2 {
+  font-size: 2em;
+}
+.relative3 {
+  font-size: 2rem; /* rem is relative to the root(html style) */
+}
+.absolute {
+  font-size: 30px; /* px is an absolute value (not dependent on any element) */
 }
 .outer {
   width: 150px;
@@ -52,6 +80,7 @@ h5 {
   height: 110px;
   color: #09b1d0; /* HEX values #RRGGBB value=(0-9-A-E) */
   background-color: #093f;
+  font-family: helvetica;
 }
 .st2 {
   text-transform: uppercase;
