--- a/test.css
+++ b/test.css
@@ -233,3 +233,24 @@ ul li a {
 .d5 {
   background: linear-gradient(to top right, white, rgba(0, 0, 0, 1));
 }
+.op1,
+.op2 {
+  min-height: 100vh;
+  align-items: center;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 60px;
+  color: tomato;
+}
+.op1 {
+  background: url(/media/jupiter.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
+.op2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(255, 0, 0, 0.8));
+  background: url(/media/beach.jpg) center/cover fixed no-repeat; /* order */
+}
