--- a/test.css
+++ b/test.css
@@ -28,7 +28,7 @@
   color: chartreuse;
 }
 .p01::before {
-  content: "psuedo element";  /* psuedo element */
+  content: "psuedo element"; /* psuedo element */
   color: #e0ca3c;
   font-size: 40px;
   font-weight: bold;
@@ -55,7 +55,38 @@
     font-size: 70px;
   }
 }
-
+.img2 {
+  border: 2px red solid;
+  position: relative;
+  width: 60vw;
+  margin: 40px auto;
+}
+.i5 {
+  width: 100%;
+  display: block;
+}
+.img2::before {
+  content: ""; /* content required */ /* img doesn't support psuedo elements */
+  border: 2px rgb(46, 192, 46) solid;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  z-index: -2;
+}
+.img2::after {
+  content: "";
+  background: rgb(255, 192, 46);
+  width: 100%;
+  height: 100%;
+  top: -10px;
+  left: -10px;
+  position: absolute;
+  z-index: -2;
+  box-sizing: border-box;
+}
 .img1 {
   border: 6px rgb(0, 255, 0) solid;
   height: 80vh;
