--- a/test.css
+++ b/test.css
@@ -72,17 +72,17 @@
   width: 100%;
   box-sizing: border-box;
   position: absolute;
-  top: -20px;
-  left: -20px;
+  top: -40px;
+  left: -50px;
   z-index: -2;
 }
 .img2::after {
   content: "";
-  background: rgb(255, 192, 46);
+  background: rgba(255, 192, 46, 0.5);
   width: 100%;
   height: 100%;
-  top: -10px;
-  left: -10px;
+  top: -20px;
+  left: -25px;
   position: absolute;
   z-index: -2;
   box-sizing: border-box;
