--- a/test.css
+++ b/test.css
@@ -3,6 +3,11 @@
   /* universal selector */ /* usually used to reset the default browser style */
   color: rgb(128, 115, 64);
 }
+:root {
+  /* font-size: 110%; /* we use root element to change properties globally, rem values depend on this */
+  background: rgb(39, 38, 34);
+  margin-top: -30px;
+}
 #top {
   text-decoration: line-through;
   color: rgba(
