--- a/test.css
+++ b/test.css
@@ -363,6 +363,12 @@ ul li a {
     64deg
   ); /* if I make the ratatex or ratateY value 90 then the 2D element will not be visible */
 }
+.t4 {
+}
+.t5 {
+}
+.t6 {
+}
 .d01,
 .d02,
 .d03,
