--- a/test.css
+++ b/test.css
@@ -364,10 +364,16 @@ ul li a {
   ); /* if I make the ratatex or ratateY value 90 then the 2D element will not be visible */
 }
 .t4 {
+  background: #e0ca3c;
+  transform: skew(40deg);
 }
 .t5 {
+  background: #e64bd4;
+  transform: skewY(67deg);
 }
 .t6 {
+  background: #fff;
+  transform: skew(30deg, 45deg);
 }
 .d01,
 .d02,
