--- a/test.css
+++ b/test.css
@@ -481,6 +481,27 @@ ul li a {
     background: hotpink;
   }
 }
+.animation1 {
+  background: rgb(0, 255, 0);
+  animation: move 4s infinite;
+}
+@keyframes move {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    transform: translateX(200px);
+    opacity: 0.25;
+  }
+  50% {
+    transform: translateX(-100px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(200px);
+    opacity: 0.5;
+  }
+}
 .d01,
 .d02,
 .d03,
