--- a/test.css
+++ b/test.css
@@ -52,13 +52,13 @@
 .p01:hover {
   color: #e64bd4;
   text-decoration: line-through;
-  background-color: rgb(18, 27, 24);
+  background-color: rgb(18, 211, 24);
 }
 .al:hover {
   background: indigo;
 }
 .al:link {
-  color: #e64bd4;
+  color: #e647d4;
 }
 .al:visited {
   color: red;
@@ -70,7 +70,8 @@
   #top {
     background: crimson;
     color: cyan;
-    font-size: 40px;
+    font-size: 80px;
+    font-style: oblique;
   }
 }
 @media screen and (min-width: 900px) {
