--- a/test.css
+++ b/test.css
@@ -674,11 +674,11 @@ ul li a {
   color: rgb(11, 133, 51);
 }
 .d25 {
-  font-size: 20px;
-  border-radius: 14px;
-  border: red 2px;
-  background: red;
+  font-size: 20rem;
+  border-radius: 8px;
+  border: #fff 1px;
+  background: #e0ca3c;
   position: fixed;
-  bottom: 460px;
-  left: 10px;
+  bottom: 90%;
+  left: 8%;
 }
