--- a/test.css
+++ b/test.css
@@ -680,6 +680,6 @@ ul li a {
   border: #fff 1px;
   background: #e0ca3c;
   position: fixed;
-  bottom: 90%;
-  left: 8%;
+  bottom: 90rem;
+  left: 8rem;
 }
