--- a/test.css
+++ b/test.css
@@ -52,6 +52,8 @@
 }
 .p01:hover {
   color: #e64bd4;
+  text-align: justify;
+  text-transform: uppercase;
   text-decoration: line-through;
   background-color: rgb(18, 1, 24);
 }
