--- a/test.css
+++ b/test.css
@@ -31,7 +31,7 @@
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif; /* the "Zen Tokyo Zoo"(imported grom google fonts) font is only gonna work when connected to internet other the default font from the family will show-up */
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 500px) {
   #top {
     background: crimson;
     color: cyan;
@@ -39,11 +39,14 @@
     font-style: oblique;
   }
 }
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 600px) {
   #top {
     background: seashell;
     color: darkblue;
-    font-size: 1rem;
+    font-family: monospace;
+    font-style: oblique;
+    font-size: 2rem;
+    text-decoration: wavy;
   }
 }
 .p01 {
