--- a/test.css
+++ b/test.css
@@ -22,6 +22,7 @@
   border: 4px solid blueviolet; /* order matter > width type color */
   border-radius: 20px;
   max-width: 400px;
+  font-size: 16px;
   padding-left: 60px;
   margin-left: auto;
   margin-right: auto;
@@ -42,7 +43,7 @@
 @media screen and (min-width: 600px) {
   #top {
     background: seashell;
-    color: darkblue;
+    color: rgb(5, 1, 7);
     font-family: monospace;
     font-style: oblique;
     font-size: 2rem;
