--- a/test.css
+++ b/test.css
@@ -224,9 +224,9 @@ h5 {
 }
 .p1 {
   width: 400px;
-  font-style: italic;
+  font-style: initial;
   text-align: right;
-  text-indent: 200px;
+  text-indent: 120px;
   line-height: 2em;
   text-transform: capitalize;
 }
@@ -275,7 +275,7 @@ h5 {
   font-family: "Fuggles", cursive;
 }
 .relative3 {
-  font-size: 2rem; /* rem is relative to the root(html style) */
+  font-size: 3rem; /* rem is relative to the root(html style) */
 }
 .absolute {
   font-size: 30px; /* px is an absolute value (not dependent on any element) */
@@ -349,7 +349,7 @@ ul li a {
   color: #fff;
 }
 .box1 {
-  background-color: red;
+  background-color: rgba(095, 195, 090, 0.7);
   padding: 20px;
   box-sizing: border-box; /* it fixes the size of box and padding is now inside the box */
 }
