--- a/test.css
+++ b/test.css
@@ -30,12 +30,15 @@
     "Lucida Sans", Arial, sans-serif;
   margin: 0 6vw 0 54vw;
 }
-
+.div01 {
+  margin-top: 2rem;
+}
 .a00 {
   color: #d9d9d9ff;
   text-decoration: underline;
 }
-.ul00 {
+.ul00,
+.ul01 {
   margin-left: 6vw;
 }
 .p02 {
