--- a/test.css
+++ b/test.css
@@ -10,7 +10,7 @@
   text-align: center;
   margin-bottom: 2rem;
   font-style: oblique;
-  text-shadow: 1px 1.2px #ff0000;
+  text-shadow: 1px 1.2px #f00202;
 }
 .a_h1 {
   text-decoration: none;
