--- a/test.css
+++ b/test.css
@@ -6,7 +6,7 @@
 .h100 {
   color: rgb(255, 243, 136);
   font-family: monospace;
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
   margin-bottom: 2rem;
   font-style: oblique;
@@ -41,11 +41,14 @@
 .ul01 {
   margin-left: 6vw;
   text-decoration: none;
-  border: 4px #4d7 solid;
-  background: rgba(40, 80, 40, 0.7);
-  border-radius: 7px;
+  background: rgba(64, 75, 64, 0.7);
+  border-radius: 2px;
   width: fit-content;
 }
 .p02 {
   margin-top: 2rem 0 0 6vw;
+  width: fit-content;
+
+  background: rgba(52, 114, 68, 0.8);
+  border: 1px rgb(60, 99, 73) solid;
 }
