--- a/test.css
+++ b/test.css
@@ -3,17 +3,16 @@
   color: #ffff;
   /* margin-left: 6vw; */
 }
-.h100 {
+.a_h1 {
+  text-decoration: none;
   color: rgb(255, 243, 136);
   font-family: monospace;
   font-size: 3rem;
   text-align: center;
+  display: block;
   margin-bottom: 2rem;
   font-style: oblique;
   text-shadow: 1px 1.2px #e60b0b;
-}
-.a_h1 {
-  text-decoration: none;
 }
 .p00 {
   position: absolute;
@@ -33,10 +32,6 @@
 .div01 {
   margin-top: 2rem;
 }
-.a00 {
-  color: #d9d9d9ff;
-  text-decoration: underline;
-}
 .ul00,
 .ul01 {
   margin-left: 6vw;
@@ -47,6 +42,8 @@
 }
 .p02 {
   /* margin-top: 2rem 0 0 6vw; */
+  color: #d9d9d9ff;
+  text-decoration: underline;
   width: fit-content;
   background: rgba(52, 114, 68, 0.8);
   border: 1px rgb(60, 99, 73) solid;
