--- a/test.css
+++ b/test.css
@@ -22,6 +22,14 @@
     "Lucida Sans", Arial, sans-serif;
   margin: 0 4vw 0 6vw;
 }
+.p00::first-letter {
+  font-size: large;
+  font-weight: bolder;
+}
+.p01::first-letter {
+  font-size: large;
+  font-weight: bolder;
+}
 .p01 {
   width: 40vw;
   font-size: 1rem;
