--- a/test.css
+++ b/test.css
@@ -39,6 +39,8 @@
 }
 .div01 {
   margin-top: 2rem;
+  max-width: min-content;
+  text-align: center;
 }
 .ul00,
 .ul01,
@@ -48,9 +50,8 @@
   text-decoration: none;
   background: rgba(64, 75, 64, 0.7);
   border-radius: 2px;
-  width: fit-content;
 }
-p.ul02 {
+p.ul02, p.ul03 {
   background-color: rgb(23, 85, 85);
   font-weight: bold;
   padding: 4px;
